--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <head>
        
 <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
+<script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/jquery.mobile-1.4.5.min.js"></script>
 <title>Aplicación Móvil</title>
